swath of scss fixes for mobiles devices, reduced image sizes to stop long lag time on load removed original backstretch component as it not used anymore

--- a/portfolio/src/components/backstretch/Copyright.scss
+++ b/portfolio/src/components/backstretch/Copyright.scss
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 700px) {
-  .section {
-    text-align: center;
+  .copyright {
+    text-align: center !important;
   }
 }
