--- a/portfolio/src/components/profile/Experience.scss
+++ b/portfolio/src/components/profile/Experience.scss
@@ -22,5 +22,9 @@
     .highlights {
       text-align: center;
     }
+
+    .period {
+      text-align: center !important;
+    }
   }
 }
