--- a/portfolio/src/components/profile/Technical.scss
+++ b/portfolio/src/components/profile/Technical.scss
@@ -31,5 +31,9 @@
     .dev-icon {
       text-align: center;
     }
+
+    .search {
+      text-align: center;
+    }
   }
 }
